--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2175,7 +2175,7 @@ img {
 
             .col-mobile {
                 flex: initial;
-                height: max-content;
+                height: fit-content;
 
                 .fleuron-wrap {
                     img {
